deploy/deploy-kind.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-api-deployment
  labels:
    app: super-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: super-api
  template:
    metadata:
      labels:
        app: super-api
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 13000
        runAsNonRoot: true
      containers:
        - name: super-api
          image: gbaeke/superapi:0.2.0
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          args: ["--port=8080"]
          ports:
            - containerPort: 8080
          resources:
              requests:
                memory: "64Mi"
                cpu: "50m"
              limits:
                memory: "64Mi"
                cpu: "50m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
              httpGet:
                path: /readyz
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
