deploy/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-api-deployment2
  labels:
    app: super-api2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: super-api2
  template:
    metadata:
      labels:
        app: super-api2
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "super-api2"
        dapr.io/app-port: "8080"
        #dapr.io/config: "auth"
        dapr.io/log-level: "debug"
        #dapr.io/sidecar-listen-addresses: "0.0.0.0"
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 13000
        runAsNonRoot: true
      containers:
        - name: super-api
          image: ghcr.io/gbaeke/super:1.0.7
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          args: ["--port=8080"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
              requests:
                memory: "64Mi"
                cpu: "50m"
              limits:
                memory: "64Mi"
                cpu: "50m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
              httpGet:
                path: /readyz
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 15
