deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-api-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: super-api
