deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: super-api-ingress
  namespace: super-api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true" 
spec:
  tls:
  - hosts:
    - app.20.101.7.133.nip.io
    secretName: super-api-secret
  rules:
  - host: app.20.101.7.133.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: super-api-service
            port:
              number: 80
